DZ.22.1_InnaKuzubova completed

--- a/DZ.21.1_InnaKuzubova/index.html
+++ b/DZ.21.1_InnaKuzubova/index.html
@@ -4,17 +4,15 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pirates of the Caribbean</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
 <h1>Pirates of the Caribbean</h1>
 <h2>Article about the film series</h2>
-<h6>(here is hortly about my favourite film)</h6>
-Наконец-то <b>выхо</b>дные :)
-Наконец-то <i>выхо</i>дные :)
-Наконец-то <u>выхо</u>дные :)
-<s>Наконец-то</s> выходные :)
 
-<p><b>Pirates of the Caribbean</b> is an American fantasy supernatural swashbuckler film series produced by <i>Jerry Bruckheimer</i> and based on Walt Disney's theme park attraction of the same name. The film series serves as a major component of the titular media franchise. The films' plots are set primarily in the Caribbean, based on a fictionalized version of the Golden Age of Piracy (c.1650–1726) while also leading to the range of a mid-1700s setting.</p>
+<div class="container">
+<div class="text-block"><p><b>Pirates of the Caribbean</b> is an American fantasy supernatural swashbuckler film series produced by <i>Jerry Bruckheimer</i> and based on Walt Disney's theme park attraction of the same name. The film series serves as a major component of the titular media franchise. The films' plots are set primarily in the Caribbean, based on a fictionalized version of the Golden Age of Piracy (c.1650–1726) while also leading to the range of a mid-1700s setting.</p>
 
 <p>Directors of the series include <i>Gore Verbinski</i> (films 1–3), <i>Rob Marshall</i> (4), <i>Joachim Rønning</i> (5), and <i>Espen Sandberg</i> (5). The series is primarily written by <i>Ted Elliott</i> and <i>Terry Rossio</i> (1–4); other writers include <i>Stuart Beattie</i> (1), <i>Jay Wolpert</i> (1) and <i>Jeff Nathanson</i> (5).</p>
 
@@ -23,32 +21,9 @@
 <p>he film series started in 2003 with <b>Pirates of the Caribbean: The Curse of the Black Pearl</b>, which had a positive reception from audiences and film critics. It grossed $654 million worldwide.After the first film's success, Walt Disney Pictures announced that a film series was in the works. The franchise's second film, subtitled <b>Dead Man's Chest</b>, was released in 2006 and broke financial records worldwide the day of its premiere. <b>Dead Man's Chest</b> became the top-grossing movie of 2006 with almost $1.1 billion at the worldwide box office. The third film in the series, subtitled <b>At World's End</b>, followed in 2007 earning $960 million. Disney released a fourth film, subtitled <b>On Stranger Tides</b>, in 2011 in conventional 2D, Digital 3-D and IMAX 3D. <b>On Stranger Tides</b> succeeded in also grossing more than $1 billion, becoming the second film in the franchise and only the eighth film in history to do this, at the time of release. A fifth film, subtitled <b>Dead Men Tell No Tales</b>, was released in 2017 earning $796 million.</p>
 
 <p><s>The franchise has grossed over $4.5 billion worldwide. It is the 16th-highest-grossing film series of all time, and is the first film franchise to produce two or more films that grossed over $1 billion.</s></p>
+</div>
 
-<h2>Contacts</h2> 
-<div></div>
-
-<h3><a href="pages/contact.html">To the contact page</a></h3>
-
-<h2>Films</h2> 
-
-<ol>
-<li>Pirates of the Caribbean: The Curse of the Black Pearl</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_Caribbean_-_The_Curse_of_the_Black_Pearl.png"><br><br>
-
-<li>Pirates of the Caribbean: Dead Man's Chest</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_caribbean_2_poster_b.jpg"><br><br>
-
-<li>Pirates of the Caribbean: At World's End</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_AWE_Poster.jpg"><br><br>
-
-<li>Pirates of the Caribbean: On Stranger Tides</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_Caribbean_-_On_Stranger_Tides.png"><br><br>
-
-<li>Pirates of the Caribbean: Dead Men Tell No Tales</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_Caribbean,_Dead_Men_Tell_No_Tales.jpg"><br><br>
-</ol>
-
-<h3><a href="pages/gallery.html">Starring</a></h3>
+<div class="Starring"><h3 style="display: flex; justify-content: left;"><a href="pages/gallery.html">Starring</a></h3>
 
 <u1>
 <li>Johnny Depp</li>	
@@ -57,6 +32,39 @@
 <li>Orlando Bloom</li>
 <li>Keira Knightley</li>
 </u1><br>
+</div>
+
+</div>
+
+<h2>Contacts</h2> 
+
+<h3 style="padding-bottom: 60px;"><a href="pages/contact.html">To the contact page</a></h3>
+
+<h2>Films</h2> 
+
+<ol>
+<li>Pirates of the Caribbean: The Curse of the Black Pearl</li><br>
+
+<li>Pirates of the Caribbean: Dead Man's Chest</li><br>
+
+<li>Pirates of the Caribbean: At World's End</li><br>
+
+<li>Pirates of the Caribbean: On Stranger Tides</li><br>
+
+<li>Pirates of the Caribbean: Dead Men Tell No Tales</li><br>
+</ol>
+
+<div class="pics">
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_Caribbean_-_The_Curse_of_the_Black_Pearl.png"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_caribbean_2_poster_b.jpg"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_AWE_Poster.jpg"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_Caribbean_-_On_Stranger_Tides.png"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Pirates_of_the_Caribbean,_Dead_Men_Tell_No_Tales.jpg"><br><br>
+</div>
 
 </body>
 </html>
