--- a/DZ.21.1_InnaKuzubova/pages/contact.html
+++ b/DZ.21.1_InnaKuzubova/pages/contact.html
@@ -4,11 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact</title>
+	<link rel="stylesheet" type="text/css" href="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\style.css">
+
 </head>
 <body>
 	<h1>Warner Bros.</h1>
 
-<h2><u>Office and Production</u></h2>
+<div class="container1">
+<div class="text-block1">
+
+<h2 style="display: flex; justify-content: left;"><u>Office and Production</u></h2>
+
 <u1>
 <li><b>Contact:</b> John Smith, Ian Corrigan</li>
 <li><b>Phone:</b> 818-954-6777</li>
@@ -16,16 +22,19 @@
 <li><b>Website:</b> www.wbstagesandsets.com</li>
 </u1>
 
-<h2><u>Post Production</u></h2>
+<h2 style="display: flex; justify-content: left;"><u>Post Production</u></h2>
+
 <u1>
 <li><b>Contact:</b> Duke Lim</li>
 <li><b>Phone:</b> 818-954-5305</li>
 <li><b>Email:</b> WBMotionPictureImaging@wbd.com</li>
 <li><b>Website:</b> www.motionpictureimaging.com</li>
 </u1><br><br>
+</div>
 
-<h2>Apply for audition:</h2>
-<form action="/submit" method="post">
+<div class="loginwrap">
+<h2 style="display: flex; justify-content: end;">Apply for audition:</h2>
+<form class="loginform" action="/submit" method="post">
 	<label for="name">Name</label><br>
 	<input type="text" id="name" name="name"><br><br>
 
@@ -36,7 +45,10 @@
 	<textarea id="message" name="message" rows="3"></textarea><br><br>
 
 	<button type="submit">apply</button>
-</form><br>
+</form></div>
+</div>
+
+</div>
 
 <nav>
 <h3><a href="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\index.html">To the main page</a></h3>	
