--- a/DZ.21.1_InnaKuzubova/pages/gallery.html
+++ b/DZ.21.1_InnaKuzubova/pages/gallery.html
@@ -4,30 +4,40 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Gallery</title>
+	<link rel="stylesheet" type="text/css" href="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\style.css">
 </head>
 <body>
 
-<h2>Actors</h2>
+<h1>Actors</h1>
 
-<u1>
+
+<u1 class="names">
 <li>Johnny Depp</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Jack Sparrow.jpg"><br><br>
 
 <li>Geoffrey Rush</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Barbossa.jpg"><br><br>
 
 <li>Bill Nighy</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Davy Jhons.jpg"><br><br>
 
 <li>Orlando Bloom</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\turner4.jpg"><br><br>
 
 <li>Keira Knightley</li><br>
-<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Elizabeth.jpg"><br><br>
 
 <li>Thomas Anthony Hollander</li><br>
+</u1>
+
+<div class="pics2">
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Jack Sparrow.jpg"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Barbossa.jpg"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Davy Jhons.jpg"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\turner4.jpg"><br><br>
+
+<img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Elizabeth.jpg"><br><br>
+
 <img src="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\photos\Backet.jpg"><br><br>
-</u1><br>
+</div><br>
 
 <nav>
 <h3><a href="D:\WORK\Hillel27012025\DZ20.1Inna-Kuzubova\DZ.21.1_InnaKuzubova\index.html">To the main page</a></h3>	
